# hack-the-elf

./: .gitignore  README.md
delf/: Cargo.toml
delf/src/: lib.rs  parse.rs
elk/: Cargo.toml
elk/src/: main.rs  name.rs  process.rs  procfs.rs
minipak/: Cargo.toml  rust-toolchain
minipak/crates/encore/: Cargo.toml
minipak/crates/encore/src/: env.rs  error.rs  fs.rs  items.rs  lib.rs  memmap.rs  prelude.rs  syscall.rs  utils.rs
minipak/crates/minipak/: Cargo.toml  build.rs
minipak/crates/minipak/.cargo/: config
minipak/crates/minipak/src/: cli.rs  error.rs  lib.rs  main.rs
minipak/crates/pixie/: Cargo.toml
minipak/crates/pixie/src/: launch.rs  lib.rs  manifest.rs  writer.rs
minipak/crates/pixie/src/format/: header.rs  mod.rs  prelude.rs  program_header.rs  sym.rs
minipak/crates/stage1/: Cargo.toml
minipak/crates/stage1/src/: lib.rs  main.rs
minipak/crates/stage2/: Cargo.toml  build.rs
minipak/crates/stage2/src/: lib.rs
py/: autosym.py  chall.c  disas1.py  gdb-elk.py  relocations.py  sections.py
samples/: Makefile  READMD.md  blowstack.asm  bss.asm  bss2.asm  bss3.asm  entry_point.c  entry_point1.c  entry_point2.c  hello-dl.asm  hello-nolibc.c  hello-pie.asm  hello.asm  ifunc-nolibc.c  loadtest.c  mapzero.c  msg.asm  nodata.asm  nolibc.c  puts.c
samples/chimera/: Makefile  bar.c  chimera.c
samples/echidna/: Cargo.toml
samples/echidna/src/: main.rs  support.rs
samples/twothreads/: twothreads.c
