[package]
name = "elk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_debug_derive = "0.5"
delf = { path = "../delf" }
enumflags2 = "0.6"
mmap = "0.1"
multimap = "0.8"
region = "2"
thiserror = "1"
