[package]
name = "encore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
compiler_builtins = { version = "0.1.39", features = ["mangled-names"] }
displaydoc = { version = "0.1.7", default-features = false }
linked_list_allocator = "0.8.11"
rlibc = "1.0.0"
