[package]
name = "minipak"
version = "0.1.0"
authors = ["pedrogao <1312342604@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encore = { version = "0.1.0", path = "../encore" }
pixie = { path = "../pixie" }
lz4_flex = { version = "0.7.5", default-features = false, features = ["safe-encode", "safe-decode"] }
displaydoc = { version = "0.1.7", default-features = false }
