[package]
name = "stage2"
version = "0.1.0"
authors = ["pedrogao <pedrogao@tencent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
incremental = false

[dependencies]
encore = { path =  "../encore" }
pixie = { path = "../pixie" }
lz4_flex = { version = "0.7.5", default-features = false, features = ["safe-encode", "safe-decode"] }